# pack-editor

./: .dockerignore  .gitignore  Dockerfile  README.md  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
examples/: data.json  request.json
pack/: admin.py  api.py  models.py
pack/migrations/: 0001_initial.py  0002_alter_pack_on_sale_alter_pack_originium_and_more.py  0002_pack_display_name_pack_image.py  0003_alter_developresource_name_alter_gacharesource_name_and_more.py  0003_remove_pack_on_sale_pack_end_date_and_more.py  0004_alter_otheritem_originium_alter_pack_end_date_and_more.py  0004_alter_pack_pack_id.py  0005_developresource_pinyin.py  0005_pack_img.py  0006_alter_developresource_pinyin.py  0007_gacharesource_value_alter_developresource_pinyin.py  0008_remove_gacharesource_value_developresource_value.py
pack_editor/: asgi.py  settings.py  urls.py  wsgi.py
